# mcp-vpcsc

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .trivyignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  README.md  SECURITY.md  SKILLS.md  SUPPORT.md  cloudbuild.yaml  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  allowlist-baseline.json  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci-coach.lock.yml  ci-coach.md  ci.yml
docs/: architecture.md  concepts.md  getting-started.md  mcp-server-guide.md  runbook-cloud-run.md  runbook-cloudshell.md  runbook-local.md  security.md  use-cases.md
examples/adk-agent/: .env.example  AGENT_PLATFORM.md  Dockerfile  deploy_agent_engine.py  main.py  memory_bank.py  requirements.txt  run_agent.py
examples/adk-agent/evals/: README.md  test_basic_evals.py
examples/adk-agent/evals/eval_sets/: basic.evalset.json
examples/adk-agent/vpcsc_agent/: agent.py  cloudshell.py
examples/adk-multi-agent/: .env.example  main.py
examples/adk-multi-agent/vpcsc_multi_agent/: agent.py
scripts/: check_allowlist_drift.py  cloudshell-setup.sh  run-diagnostic.py
src/vpcsc_mcp/: __init__.py  server.py
src/vpcsc_mcp/data/: __init__.py  patterns.py  policies.py  services.py
src/vpcsc_mcp/tools/: __init__.py  analysis.py  circuit_breaker.py  diagnostic.py  gcloud_ops.py  halt.py  input_filters.py  metrics_export.py  observability.py  org_policy.py  rule_gen.py  safety.py  terraform_gen.py
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/modules/mcp-server/: main.tf  outputs.tf  variables.tf
tests/: test_audit_chain.py  test_circuit_breaker.py  test_halt.py  test_input_filters.py  test_observability.py  test_rule_gen.py  test_safety.py  test_server.py
