[project]
name = "vpcsc-mcp"
version = "0.1.0"
description = "MCP server for VPC Service Controls setup and implementation — helps AI agents and developers manage GCP VPC-SC perimeters, access levels, and troubleshooting"
requires-python = ">=3.13"
license = "MIT"
authors = [
    { name = "The Cloud Team" },
]
keywords = ["mcp", "vpc-service-controls", "gcp", "google-cloud", "security", "terraform", "ai-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
dependencies = [
    "mcp[cli]>=1.26.0,<2",
    "pydantic>=2.12.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/erayguner/mcp-vpcsc"
Repository = "https://github.com/erayguner/mcp-vpcsc"
Documentation = "https://github.com/erayguner/mcp-vpcsc/tree/main/docs"
Issues = "https://github.com/erayguner/mcp-vpcsc/issues"
Changelog = "https://github.com/erayguner/mcp-vpcsc/blob/main/CHANGELOG.md"

[project.optional-dependencies]
adk = [
    "google-adk>=1.27.0",
    "python-dotenv>=1.2.2",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vpcsc_mcp"]

[project.scripts]
vpcsc-mcp = "vpcsc_mcp.server:main"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
